@@ -10,37 +10,37 @@ module Gluon::Test
       @Controller = Class.new(Gluon::Controller)
     end
 
-    def test_gluon_path_filter
-      @Controller.class_eval{ gluon_path_filter %r"^/foo/([^/]+)$" }
+    def test_gluon_path_match
+      @Controller.class_eval{ gluon_path_match %r"^/foo/([^/]+)$" }
       assert_equal(%r"^/foo/([^/]+)$",
-                   Gluon::Controller.find_path_filter(@Controller))
+                   Gluon::Controller.find_path_match_pattern(@Controller))
     end
 
-    def test_gluon_path_filter_inherited
-      @Controller.class_eval{ gluon_path_filter %r"^/foo/([^/]+)$" }
+    def test_gluon_path_match_inherited
+      @Controller.class_eval{ gluon_path_match %r"^/foo/([^/]+)$" }
       subclass = Class.new(@Controller)
       assert_equal(%r"^/foo/([^/]+)$",
-                   Gluon::Controller.find_path_filter(subclass))
+                   Gluon::Controller.find_path_match_pattern(subclass))
     end
 
-    def test_gluon_path_block
+    def test_gluon_path_match_block
       @Controller.class_eval{
-        gluon_path_filter %r"^/(\d\d\d\d)-(\d\d)-(\d\d)$" do |year, mon, day|
+        gluon_path_match %r"^/(\d\d\d\d)-(\d\d)-(\d\d)$" do |year, mon, day|
           format("/%04d-%02d-%02d", year, mon, day)
         end
       }
-      block = Gluon::Controller.find_path_block(@Controller)
+      block = Gluon::Controller.find_path_match_block(@Controller)
       assert_equal('/1975-11-19', block.call(1975, 11, 19))
     end
 
-    def test_gluon_path_block_inherited
+    def test_gluon_path_match_block_inherited
       @Controller.class_eval{
-        gluon_path_filter %r"^/(\d\d\d\d)-(\d\d)-(\d\d)$" do |year, mon, day|
+        gluon_path_match %r"^/(\d\d\d\d)-(\d\d)-(\d\d)$" do |year, mon, day|
           format("/%04d-%02d-%02d", year, mon, day)
         end
       }
       subclass = Class.new(@Controller)
-      block = Gluon::Controller.find_path_block(subclass)
+      block = Gluon::Controller.find_path_match_block(subclass)
       assert_equal('/1975-11-19', block.call(1975, 11, 19))
     end
 
